workshop04/wordpress/wp-app-deploy.yaml
--- # Volume claim
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: wp-pvc
  labels:
    app: wordpress
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
  storageClassName: do-block-storage

--- # Deployment: Wodpress
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-wordpress-deploy
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-wordpress-pod
  template:
    metadata:
      labels:
        name: my-wordpress-pod
        app: my-wordpress-pod
    spec:
      volumes:
      - name: wp-vol
        persistentVolumeClaim:
          claimName: wp-pvc
      containers:
      - name: wordpress-container
        image: wordpress:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: wp-port
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wp-svc
  labels:
    app: wordpress
spec:
  type: ClusterIP
  selector:
    app: my-wordpress-pod
  ports:
  - name: app-port
    port: 80 
    targetPort: wp-port
